crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__command_output_json_format.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: json
---
duration:
  nanos: 750000000
  secs: 0
exit_code: 1
stderr: fail
stdout: partial
timed_out: false
