crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__command_output_timed_out.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: output
---
exit_code: -1
stdout: ""
stderr: "partial output\ncargo timed out after 30s"
timed_out: true
duration:
  secs: 30
  nanos: 0
