crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__command_result_failure_no_exit_code.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: result
---
success: false
exit_code: ~
stdout: ""
stderr: process terminated by signal
duration_ms: 300
