crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__command_result_failure_with_exit_code.snap
---
source: crates/shipper/src/ops/process/snapshot_tests.rs
expression: result
---
success: false
exit_code: 1
stdout: ""
stderr: "error: could not compile `foo`\n"
duration_ms: 1500
