crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__command_result_json_format.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: json
---
duration_ms: 100
exit_code: 0
stderr: ""
stdout: ok
success: true
