crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__command_result_success.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: result
---
success: true
exit_code: 0
stdout: "hello world\n"
stderr: ""
duration_ms: 42
