crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__error_message_empty_stderr.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: err.to_string()
---
"command failed with exit code Some(2): "
