crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__error_message_without_exit_code.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: err.to_string()
---
"command failed with exit code None: killed by signal 9"
